Fixed z-index issues with sticky tabs

--- a/resources/assets/styles/mobile.less
+++ b/resources/assets/styles/mobile.less
@@ -349,6 +349,7 @@
       height: 41px;
       width: 100%;
       border-bottom: 0;
+      z-index: 100;
 
       li {
         a {
